--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,10 @@
-h1 {
-  color: red;
-}
+@import "variables.scss";
+@import "fonts.scss";
+
+
+// header
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+@import "blocks/contacts.scss";
+@import "blocks/navigation.scss";
+@import "blocks/promo.scss";
