Делаю блок преимуществ

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,6 @@
 @import "blocks/contacts.scss";
 @import "blocks/navigation.scss";
 @import "blocks/promo.scss";
+
+// main
+@import "blocks/advantages.scss";
