--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,10 +4,10 @@
   flex-direction: row;
   justify-content: space-between;
   width: 55%;
-  margin-right: 0;
 }
 
 .contacts__item {
+  margin-right: 10px;
   padding-top: 10px;
   font-family: "PTMono-Regular", "Arial", sans-serif;
 }
