--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,14 +1,13 @@
 .advantages {
- // background-color: $light-grey;
- @include page-size;
+  @include page-size;
+  margin-bottom: 110px;
 }
 
 .advantages__list {
   @include cancel;
+  @include flex-row;
   padding-top: 110px;
   margin-left: 80px;
-  display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -18,10 +17,9 @@
   width: 43%;
   margin-bottom: 20px;
   padding-top: 75px;
-  padding-left: 3%;
-  padding-right: 3%;
+  padding-left: 40px;
+  padding-right: 1%;
   padding-bottom: 30px;
-
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
 }
@@ -33,7 +31,7 @@
 }
 
 .advantages__title {
-  font-family: "RobotoMono-bold", "Arial", sans-serif;
+  font-family: $roboto-mono-regular-font;
   font-size: 24px;
   line-height: 34px;
   color: $blue-color;
@@ -41,11 +39,10 @@
 }
 
 .advantages__text {
-  font-family: "PTMono-Regular", "Arial", sans-serif;
-  font-size: 24px;
+  font-family: $pt-mono-regular-font;
   font-size: 16px;
   line-height: 22px;
-  color: #666666;
+  color: $black-color;
 }
 
 .advantages__item--active .advantages__title,
@@ -107,6 +104,6 @@
 
 @media (max-width: 767px) {
   .advantages__item {
-   width: 100%;
+    width: 100%;
   }
 }
