--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,8 +4,13 @@ $max-tablet-width: 1023px;
 $grey-color: #788891;
 $white-color: #ffffff;
 $blue-color: #00b2ff;
-$light-grey: #E5E5E5;
+$light-grey: #e5e5e5;
 $border-color: #ebebeb;
+$black-color: #666666;
+$pt-mono-regular-font: "PTMono-Regular", "Arial", sans-serif;
+$roboto-mono-bold-font: "RobotoMono-bold", "Arial", sans-serif;
+$roboto-mono-regular-font: "RobotoMono-Regular", "Arial", sans-serif;
+$pt-mono-mono-bold-font: "PTMono-bold", "Arial", sans-serif;
 
 @mixin cancel {
   margin: 0;
