--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -6,10 +6,9 @@
 .advantages__list {
   @include cancel;
   @include flex-row;
+  @include container;
   padding-top: 110px;
-  margin-left: 80px;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .advantages__item {
@@ -18,7 +17,7 @@
   margin-bottom: 20px;
   padding-top: 75px;
   padding-left: 40px;
-  padding-right: 1%;
+  padding-right: 5px;
   padding-bottom: 30px;
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
