--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,10 +7,10 @@ $blue-color: #00b2ff;
 $light-grey: #e5e5e5;
 $border-color: #ebebeb;
 $black-color: #666666;
-$pt-mono-regular-font: "PTMono-Regular", "Arial", sans-serif;
-$roboto-mono-bold-font: "RobotoMono-bold", "Arial", sans-serif;
-$roboto-mono-regular-font: "RobotoMono-Regular", "Arial", sans-serif;
-$pt-mono-mono-bold-font: "PTMono-bold", "Arial", sans-serif;
+$pt-mono-regular-font: "PTMono", "Arial", sans-serif;
+$roboto-mono-bold-font: "RobotoMono", "Arial", sans-serif;
+$roboto-mono-regular-font: "RobotoMono", "Arial", sans-serif;
+$pt-mono-mono-bold-font: "PTMono", "Arial", sans-serif;
 
 @mixin cancel {
   margin: 0;
@@ -52,3 +52,12 @@ $pt-mono-mono-bold-font: "PTMono-bold", "Arial", sans-serif;
   display: flex;
   flex-direction: column;
 }
+
+@mixin container {
+  width: 85%;
+  margin: 0 auto;
+  @media (max-width: 1023px) {
+    width: 100%;
+  }
+}
+
