--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,6 @@
 $header-bg-color: #1b2d37;
+$footer-bg-color: #fafafa;
+$footer-logo-color: #203C42;
 $desktop-width: 1024px;
 $max-tablet-width: 1023px;
 $grey-color: #788891;
