--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -27,7 +27,7 @@
   border: 1px solid $white-color;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: $tablet-width) {
   .contacts {
     width: 10%;
   }
