--- a/source/sass/blocks/about-office.scss
+++ b/source/sass/blocks/about-office.scss
@@ -1,24 +1,29 @@
-.about-office {
-  width: 30%;
-}
-
 .about-office__title {
-  font-family: $roboto-mono-regular-font;
-  font-size: 15px;
+  @include footer-title;
   margin-bottom: 30px;
-  text-transform: uppercase;
 }
 
 .about-office__list {
   @include cancel;
-  @include flex-row;
-  flex-wrap: wrap;
 }
 
 .about-office__link {
-  font-family: $pt-mono-regular-font;
-  font-size: 15px;
-  color: $header-bg-color;
-  font-weight: normal;
-  text-decoration: none;
+  @include footer-list-item;
+}
+
+@media (max-width: $tablet-width) {
+  .about-office {
+    width: 100%;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .about-office__title,
+  .about-office__list {
+    @include page-size;
+  }
+
+  .about-office {
+    padding: 30px 0;
+  }
 }
