--- a/source/sass/blocks/about-site.scss
+++ b/source/sass/blocks/about-site.scss
@@ -1,24 +1,36 @@
-.about-site {
-  width: 30%;
-}
-
 .about-site__title {
-  font-family: $roboto-mono-regular-font;
-  font-size: 15px;
+  @include footer-title;
   margin-bottom: 30px;
-  text-transform: uppercase;
 }
 
 .about-site__list {
   @include cancel;
   @include flex-row;
+  text-align: left;
   flex-wrap: wrap;
 }
 
+.about-site__item {
+  width: 50%;
+}
+
 .about-site__link {
-  font-family: $pt-mono-regular-font;
-  font-size: 15px;
-  color: $header-bg-color;
-  font-weight: normal;
-  text-decoration: none;
+  @include footer-list-item;
+}
+
+@media (max-width: $tablet-width) {
+  .about-site__item {
+    width: 100%;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .about-site {
+    padding-bottom: 20px;
+  }
+
+  .about-site__title,
+  .about-site__list {
+    @include page-size;
+  }
 }
