--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -8,7 +8,7 @@
   border: none;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: $tablet-width) {
   .navigation {
     margin-right: 0;
     margin-left: 50%;
