--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "variables.scss";
 @import "fonts.scss";
+@import "mixins.scss";
 
 // header
 @import "blocks/header.scss";
@@ -9,7 +10,7 @@
 @import "blocks/promo.scss";
 
 // main
-@import "blocks/about.scss";
+@import "blocks/about-company.scss";
 @import "blocks/advantages.scss";
 @import "blocks/services.scss";
 @import "blocks/stay.scss";
@@ -20,3 +21,5 @@
 @import "blocks/footer-logo.scss";
 @import "blocks/about-site.scss";
 @import "blocks/about-office.scss";
+@import "blocks/social-list.scss";
+@import "blocks/copyrights.scss";
