--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,29 +1,20 @@
 $header-bg-color: #1b2d37;
 $footer-bg-color: #fafafa;
-$footer-logo-color: #203C42;
-$desktop-width: 1024px;
-$max-tablet-width: 1023px;
+$footer-logo-color: #203c42;
 $grey-color: #788891;
 $white-color: #ffffff;
 $blue-color: #00b2ff;
 $light-grey: #e5e5e5;
 $border-color: #ebebeb;
 $black-color: #666666;
-$pt-mono-regular-font: "PTMono", "Arial", sans-serif;
-$roboto-mono-bold-font: "RobotoMono", "Arial", sans-serif;
-$roboto-mono-regular-font: "RobotoMono", "Arial", sans-serif;
-$pt-mono-mono-bold-font: "PTMono", "Arial", sans-serif;
+$pt-mono-regular-font: "PTMono-Regular", "Arial", sans-serif;
+$pt-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
+$roboto-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
+$roboto-mono-regular-font: "RobotoMono-Regular", "Arial", sans-serif;
 
-@mixin cancel {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
+$desktop-width: 1024px;
+$tablet-width: 1023px;
+$mobile-width: 767px;
 
 .visually-hidden {
   position: absolute;
@@ -38,28 +29,7 @@ $pt-mono-mono-bold-font: "PTMono", "Arial", sans-serif;
   overflow: hidden;
 }
 
-@mixin page-size {
-  width: 90%;
-  margin: 0 auto;
-  overflow: hidden;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-@mixin flex-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-@mixin flex-column {
-  display: flex;
-  flex-direction: column;
-}
-
-@mixin container {
-  width: 85%;
-  margin: 0 auto;
-  @media (max-width: 1023px) {
-    width: 100%;
-  }
-}
-
