--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -68,13 +68,16 @@
     @include flex-column;
   }
 
-  .footer__copyrights-tablet {
-    text-align: center;
-  }
-
   .footer__about {
     @include flex-column;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
     width: 100%;
+  }
+
+  .footer__copyrights-tablet {
+    text-align: center;
   }
 
   .footer__about-site {
@@ -84,5 +87,9 @@
 
   .footer__about-office {
     width: 100%;
+  }
+
+  .footer__up {
+    padding-bottom: 0;
   }
 }
