Заканчиваю верхнее меню

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -27,6 +27,13 @@
   text-transform: uppercase;
 }
 
+@mixin white-button {
+  @include button-text;
+  color: $white-color;
+  background-color: transparent;
+  border: 1px solid $white-color;
+}
+
 @mixin cancel {
   list-style: none;
 }
