--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -46,12 +46,9 @@
 }
 
 .form__button {
-  @include button-text;
-  color: $white-color;
+  @include white-button;
   padding: 5px;
   width: 40%;
-  background-color: $blue-color;
-  border: 1px solid $white-color;
 }
 
 .form__label {
