--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -6,10 +6,42 @@
 .header__wrapper {
   @include page-size;
   @include flex-row;
-  padding-top: 40px;
   margin-bottom: 40px;
+  padding-top: 40px;
+}
+
+.header__logo {
+  width: 250px;
+}
+
+.header__navigation {
+  margin-right: 10%;
+  margin-left: 5%;
+}
+
+.header__contacts {
+  width: 55%;
+  padding-right: 0;
 }
 
 .header__promo {
   @include page-size;
+}
+
+@media (max-width: $tablet-width) {
+  .header__navigation {
+    margin-right: 0;
+    margin-left: 50%;
+  }
+
+  .header__contacts {
+    width: 10%;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .header__contacts {
+    padding-right: 20px;
+  }
 }
