--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -7,8 +7,8 @@
   @include cancel;
   @include flex-row;
   @include container;
-  padding-top: 110px;
   flex-wrap: wrap;
+  padding-top: 110px;
 }
 
 .advantages__item {
@@ -16,25 +16,25 @@
   width: 43%;
   margin-bottom: 20px;
   padding-top: 75px;
-  padding-left: 40px;
-  padding-right: 5px;
+  padding-left: 30px;
+  padding-right: 10px;
   padding-bottom: 30px;
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
 }
 
 .advantages__item--active {
+  background-color: $blue-color;
   color: $white-color;
   border: none;
-  background-color: $blue-color;
 }
 
 .advantages__title {
+  margin-bottom: 15px;
   font-family: $roboto-mono-regular-font;
   font-size: 24px;
   line-height: 34px;
   color: $blue-color;
-  margin-bottom: 15px;
 }
 
 .advantages__text {
@@ -45,8 +45,8 @@
 .advantages__item--active .advantages__title,
 .advantages__item--active .advantages__text {
   color: $white-color;
-  border: none;
   background-color: $blue-color;
+  border: none;
 }
 
 .advantages__item--contractor::before {
@@ -67,6 +67,12 @@
 .advantages__item--time::before {
   @include icon-absolute-position;
   background-image: url("../img/icon-clock-active.svg");
+}
+
+@media (max-width: $tablet-width) {
+  .advantages__item {
+    padding-left: 25px;
+  }
 }
 
 @media (max-width: $mobile-width) {
