--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,7 +4,7 @@
 }
 
 .contacts__item {
-  margin-right: 10px;
+  margin-right: 20px;
   padding-top: 10px;
   font-family: $pt-mono-regular-font;
 }
@@ -18,7 +18,7 @@
 
 .contacts__button {
   @include white-button;
-  padding: 12px;
+  padding: 12px 27px;
   margin-top: -18px;
 }
 
