--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -36,10 +36,20 @@
   z-index: 20;
 }
 
+.services__item--production::before {
+  content: "Производство печатных плат";
+  opacity: 1;
+  top: 40px;
+  left: 40px;
+  position: absolute;
+  z-index: 1;
+}
+
 .services__info {
   color: $white-color;
   opacity: 1;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .services__item--production::after {
