--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -6,6 +6,10 @@
   padding-top: 60px;
   margin: 0 auto;
   overflow: hidden;
+  background-image: url("../../img/motherboard.png");
+  background-size: 700px 500px;
+  background-repeat: no-repeat;
+  background-position: 100% 0;
 }
 
 .promo__image {
@@ -13,10 +17,6 @@
   margin: 0 0 0 10%;
   position: relative;
   left: 0;
-}
-
-.promo__info {
-  width: 500px;
 }
 
 .promo__title {
@@ -31,7 +31,7 @@
   font-family: $roboto-mono-regular-font;
   font-size: 22px;
   line-height: 34px;
-  width: 75%;
+  width: 80%;
 }
 
 .promo__icon {
