--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,28 +1,20 @@
 .promo {
-  height: 640px;
   @include flex-row;
   color: $white-color;
   padding-bottom: 40px;
-  padding-top: 60px;
   margin: 0 auto;
-  overflow: hidden;
   background-image: url("../../img/motherboard.png");
   background-size: 700px 500px;
   background-repeat: no-repeat;
-  background-position: 100% 0;
-}
-
-.promo__image {
-  min-width: inherit;
-  margin: 0 0 0 10%;
-  position: relative;
-  left: 0;
+  background-position: left calc(50% + 352px) top 0;
 }
 
 .promo__title {
+  padding-top: 60px;
   font-family: $roboto-mono-regular-font;
   text-transform: uppercase;
   font-size: 80px;
+  margin-bottom: 30px;
   width: 100%;
 }
 
@@ -70,6 +62,11 @@
 }
 
 @media (max-width: $tablet-width) {
+  .promo {
+    background-size: 700px 500px;
+    background-origin: border-box;
+  }
+
   .promo__icon svg {
     width: 33px;
     height: 2px;
@@ -89,9 +86,13 @@
 }
 
 @media (max-width: $mobile-width) {
-  .promo {
-    background-size: 100%;
-    background-position: 20% 0;
+  .promo__title {
+    margin-top: 220px;
+    font-family: $roboto-mono-regular-font;
+    text-transform: uppercase;
+    font-size: 40px;
+    margin-bottom: 30px;
+    width: 100%;
   }
 
   .promo__button--desktop {
@@ -111,11 +112,12 @@
     margin: 0;
   }
 
-  .promo__title {
-    font-size: 40px;
-  }
-
   .promo__description {
     font-size: 16px;
+  }
+
+  .promo {
+    background-size: 100% 300px;
+    background-position: center top;
   }
 }
