--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -12,8 +12,10 @@
   border: none;
   padding: 5%;
   padding-right: 0%;
+  background-color: rgba(255, 255, 255, 0.1);
   margin-bottom: 30px;
   width: 95%;
+  color: $white-color;
 }
 
 .form__item-input [placeholder] {
@@ -31,6 +33,8 @@
 }
 
 .form__area {
+  color: $white-color;
+  background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   padding: 15px;
   border: none;
@@ -59,7 +63,8 @@
 .form__input-checkbox {
   width: 16px;
   height: 16px;
-  background-color: $blue-color;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
 }
 
 @media (max-width: $mobile-width) {
