--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,7 @@
 @import "blocks/about-office.scss";
 @import "blocks/social-list.scss";
 @import "blocks/copyrights.scss";
+
+// popup
+@import "blocks/popup.scss";
+@import "blocks/popup-form.scss";
