--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -151,3 +151,20 @@
   position: absolute;
   z-index: 5;
 }
+
+@mixin input {
+  border: none;
+  padding: 15px 5%;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 90%;
+  color: $white-color;
+}
+
+@mixin text-area {
+  color: $white-color;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 100%;
+  padding: 15px;
+  border: none;
+  resize: none;
+}
