--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -45,16 +45,11 @@
 }
 
 .promo__button {
-  font-family: $pt-mono-regular-font;
-  color: $white-color;
-  background-color: $blue-color;
+  @include blue-button;
   font-size: 16px;
   padding: 15px 30px;
-  border: none;
-  font-weight: bold;
   margin-top: 40px;
   margin-left: 86px;
-  text-transform: uppercase;
 }
 
 .promo__button--mobile {
